--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="https://drive.google.com/file/d/1VZrP5LprBrPuPDnty6Vt-DvGO_7z2RRu/view?usp=drivesdk" target="_blank" class="download-button">Download CV</a>
+            <a href="resume1.pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
